fixing Sacola button mobile css

--- a/src/components/elements/SacolaMobile/Sacola.module.scss
+++ b/src/components/elements/SacolaMobile/Sacola.module.scss
@@ -3,24 +3,3 @@
   width: 1000px;
   max-width: 100%;
 }
-
-.sacolaButton {
-  padding: 8px 1rem;
-  min-width: 0;
-  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
-  background-color: #F7BA00;
-  gap: 1rem;
-  justify-content: space-between;
-  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.25);
-  color: #212121;
-  font-weight: 700;
-
-  p {
-    white-space: nowrap;
-  }
-
-  &:hover {
-    background-color: #edb201;
-  }
-}
